Video now increases it's z-index when it has a fixed class.

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -625,8 +625,15 @@ h2 {
   bottom: auto;
   top: 0;
   }
-.lead-video.fixed {
+.bgContainer.fixed {
+  position: absolute!important;
+  }
+.end .bgContainer.fixed {
+  background-attachment: scroll;
   z-index: 1;
+  }
+.lead-video.fixed {
+  z-index: 2!important;
   }
 .slideshow.full.shutter {
   }
